--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -28,7 +28,7 @@
     background-color: #555;
 }
 
-.content {
+main {
     margin-left: 300px;
     margin-right: 150px;
     margin-bottom: 150px;
@@ -56,6 +56,31 @@ p {
     margin: 10px 0;
     line-height: 1.5;
 }
+input[type="text"],
+input[type="number"] {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  width: 25%;
+  margin-bottom: 10px;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: darkgray;
+  color: #fff;
+  border: none;
+/*   border-radius: 5px; */
+  font-size: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: lightgrey;
+}
+
 li {
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.5;
