--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -1,3 +1,8 @@
+body {
+  min-height: 90vh;
+  display: flex;
+  flex-direction: column;
+}
 
 .sidebar {
     position: fixed;
@@ -29,6 +34,7 @@
 }
 
 main {
+  flex: 1;
     margin-left: 300px;
     margin-right: 150px;
     margin-bottom: 150px;
@@ -36,6 +42,7 @@ main {
 }
 .pre {
      border: 2px solid #333;
+     background-color: whitesmoke;
 }
 h1 {
     font-family: Arial, Helvetica, sans-serif;
